syntax = "proto3";

package ru.otus.protobuf.generated;

option java_multiple_files = true;

message UserMessage {
    int64 startNum = 1;
    int64 finNum = 2;
    int64 countNum = 3;

}

message Empty {}

service RemoteCountService {
    rpc startCount(UserMessage) returns (stream UserMessage);
}
